# SimpleExpressionCalculatorCpp

./: .clang-format  BinaryNode.h  CMakeLists.txt  Main.cc  Makefile  Node.cc  Node.h  Readme.md  StringUtil.h
conf/: calculator.conf
src/: BinaryNode.h  Main.cc  Node.h  binary_node.h  main.cc  node.cc  node.h  node_util.cc  node_util.h  string_util.cc  string_util.h
src/base/: logging.cc  logging.h
